manifests/rtf-nginx-ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rtf-nginx-ingress-template
  namespace: rtf
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  ingressClassName: rtf-nginx
  rules:
    - host: app-name.rtf.muleaceacademy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-name
                port:
                  name: service-port
